--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3",
     "sequelize": "^6.37.0",
     "sqlite3": "^5.1.7",
